# web/openapi/Baba.Api.json
@@ -3112,6 +3112,26 @@
         }
       }
     },
+    "/api/import/opening-stock": {
+      "put": {
+        "tags": [
+          "Import"
+        ],
+        "operationId": "ImportOpeningStock",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ImportResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/import/exchange-rates": {
       "put": {
         "tags": [
